# Blend2NET

./: Blend2NET.csproj  Blend2NET.sln  CMakeLists.txt  Class1.cs  LICENCE  README.md
.github/workflows/: build-nuget.yml
src/: Array.Interoperation.cs  Array.cs  BlendObject.cs  Colour.cs  Common.cs  Context.Interoperation.Data.cs  Context.Interoperation.Proc.cs  Context.cs  FileStream.Interoperation.cs  FileStream.cs  Font.cs  Geometry.cs  ITransformable.cs  Image.cs  Miscellaneous.cs  Object.Interoperation.cs  PInvoke.Enums.cs  PInvoke.Extensions.cs  PInvoke.Procedures.cs  PInvoke.Structures.cs  Path.cs  Random.Interoperation.cs  Random.cs  Runtime.cs  RuntimeScope.cs  Styles.Gradient.cs  Styles.Pattern.cs  Styles.cs
