cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
project(Blend2NET C CXX)

set(BLEND2D_NO_INSTALL TRUE)
set(CMAKE_BUILD_TYPE Release)

if(RID STREQUAL "linux-arm64")
SET(CMAKE_SYSTEM_NAME Linux)
SET(CMAKE_SYSTEM_PROCESSOR aarch64)
SET(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
SET(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++)
SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
SET(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
set(BLEND2D_ARCH_X86 false)
set(BLEND2D_ARCH_X86_64 false)
endif()

add_subdirectory(blend2d)

install(
	TARGETS blend2d
	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/runtimes/${RID}/native"
)